--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.linkedin.com/in/jerickson-tomajin-659a2a254/">Jerickson Toamjin</a>.
+    Coded by <a href="https://www.linkedin.com/in/jerickson-tomajin-659a2a254/">Jerickson Tomajin</a>.
   </div>
 
 
