index.html modified .3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <article>
       <div class="star">
-        <img src="images/icon-star.svg" alt="star" class="star-img">
+        <img src="images/icon-star.svg" alt="" class="star-img">
       </div>
 
       <div class="rating-state">
@@ -30,13 +30,22 @@
           to help us improve our offering!
         </p>
         
-        <ul>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>5</li>
-        </ul>
+        <form action="">
+          <input class="input__radio" type="radio" name="radio" id="radio1">
+          <label for="radio1" class="input__label">1</label>
+
+          <input class="input__radio" type="radio" name="radio" id="radio2">
+          <label for="radio2" class="input__label">2</label>
+
+          <input class="input__radio" type="radio" name="radio" id="radio3">
+          <label for="radio3" class="input__label">3</label>
+
+          <input class="input__radio" type="radio" name="radio" id="radio4">
+          <label for="radio4" class="input__label">4</label>
+
+          <input class="input__radio" type="radio" name="radio" id="radio5">
+          <label for="radio5" class="input__label">5</label>
+        </form>
       </div>
 
       <button class="submit">Submit</button>
@@ -47,7 +56,7 @@
   <!-- Thank you state start -->
   <article class="article-bottom">
     <div class="img">
-      <img src="images/illustration-thank-you.svg" alt="thank you">
+      <img src="images/illustration-thank-you.svg" alt="">
     </div>
     
     <div class="rate-selected">
