index.html modified .3

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           to help us improve our offering!
         </p>
         
-        <form action="">
+        <form action="GET">
           <input class="input__radio" type="radio" name="radio" id="radio1">
           <label for="radio1" class="input__label">1</label>
 
