--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <article>
       <div class="star">
-        <img src="images/icon-star.svg" alt="" class="star-img">
+        <img src="images/icon-star.svg" alt="" class="star-img" aria-hidden="true">
       </div>
 
       <div class="rating-state">
@@ -56,7 +56,7 @@
   <!-- Thank you state start -->
   <article class="article-bottom">
     <div class="img">
-      <img src="images/illustration-thank-you.svg" alt="">
+      <img src="images/illustration-thank-you.svg" alt="" aria-hidden="true">
     </div>
     
     <div class="rate-selected">
